--- a/components/HeroSection.module.css
+++ b/components/HeroSection.module.css
@@ -30,13 +30,13 @@
   z-index: 2;
 }
 
-h1 {
+.title {
   font-size: 3rem;
   margin-bottom: 1rem;
   color: white;
 }
 
-p {
+.subtitle {
   font-size: 1.2rem;
   margin-bottom: 2rem;
   color: white;
